# advanced-django-rahil

./: .gitignore  README.md  main.py  pyproject.toml  schema.yml
apps/article/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  view.py  views.py
apps/article/migrations/: 0001_initial.py
apps/core/: models.py
apps/organizations/: models.py  serializers.py
apps/organizations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_organization_members_alter_organization_owner.py
apps/projects/: models.py  serializers.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_owner_alter_task_reporter.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
