[project]
name = "minijira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-debug-toolbar>=6.3.0",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "redis>=8.0.0",
]
